# boids

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.sh  compile_commands.json  premake5.lua  uncrustify.cfg
include/: arena.h  platform.h  spark.h  string8.h  typedefs.h  types.h  x11.h
include/base/: arena.h  string8.h  types.h
include/engine/: shader.h
include/platform/: platform.h
include/render/: shader.h
include/spark/: spark.h
include/spark/mem/: internal_alloc.h
include/spark/platform/: platform.h  x11.h
lib/base/: CMakeLists.txt  premake5.lua
lib/base/include/: arena.h  base_math.h  linalg.h  macros.h  math.h  profile.h  string8.h  typedefs.h  types.h
lib/base/include/str/: string8.h
lib/base/src/: arena_linux.c  arena_win32.c  base_math.c  profile.c  string8.c
lib/base/src/mem/: arena.c
lib/base/src/str/: string8.c
lib/spark/: CMakeLists.txt  premake5.lua
lib/spark/include/: spark.h
lib/spark/include/KHR/: khrplatform.h
lib/spark/include/glad/: glad.h
lib/spark/include/platform/: x11.h
lib/spark/include/render/: shader.h
lib/spark/src/: spark.c
lib/spark/src/glad/: glad.c
lib/spark/src/platform/x11/: x11.c
lib/spark/src/render/: shader.c
src/: main.c
src/base/mem/: arena.c
src/base/str/: string8.c
src/core/mem/: arena.c
src/core/str/: string8.c
src/engine/: shader.c
src/platform/: x11.c
src/platform/x11/: x11.c
src/render/: shader.c
src/spark/: spark.c
src/spark/platform/x11/: x11.c
src/spark/render/: shader.c
